k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasktracker-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasktracker-api
  template:
    metadata:
      labels:
        app: tasktracker-api
    spec:
      containers:
        - name: tasktracker-api
          image: ghcr.io/refactorninja12/tasktracker-api:62b60a8
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tasktracker-api
spec:
  selector:
    app: tasktracker-api
  ports:
    - port: 8080
      targetPort: 8080
